; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_hashdescr.c__normalize_byteorder.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_hashdescr.c__normalize_byteorder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NPY_CPU_BIG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i8)* @_normalize_byteorder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @_normalize_byteorder(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = sext i8 %4 to i32
  switch i32 %5, label %12 [
    i32 61, label %6
  ]

6:                                                ; preds = %1
  %7 = call i32 (...) @PyArray_GetEndianness()
  %8 = load i32, i32* @NPY_CPU_BIG, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  store i8 62, i8* %2, align 1
  br label %14

11:                                               ; preds = %6
  store i8 60, i8* %2, align 1
  br label %14

12:                                               ; preds = %1
  %13 = load i8, i8* %3, align 1
  store i8 %13, i8* %2, align 1
  br label %14

14:                                               ; preds = %12, %11, %10
  %15 = load i8, i8* %2, align 1
  ret i8 %15
}

declare dso_local i32 @PyArray_GetEndianness(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
